[gd_scene load_steps=13 format=3 uid="uid://m4c105rclpk5"]

[ext_resource type="Script" path="res://Scripts/Enemys/basic_enemy2.gd" id="1_obslr"]
[ext_resource type="PackedScene" uid="uid://jnkl30satsbb" path="res://Scenes/Components/health_component.tscn" id="2_p2i3h"]
[ext_resource type="PackedScene" uid="uid://5t48vqnhunai" path="res://Scenes/Components/vial_drop_component.tscn" id="3_t36rj"]
[ext_resource type="PackedScene" uid="uid://c2ao038ji85tt" path="res://Scenes/Components/death_component.tscn" id="4_e16vh"]
[ext_resource type="PackedScene" uid="uid://bjfpqxunjkyw2" path="res://Scenes/Components/velocity_component.tscn" id="4_vkytm"]
[ext_resource type="PackedScene" uid="uid://d3gbnxq2mchbv" path="res://Scenes/Components/hurtbox_component.tscn" id="5_urpjr"]
[ext_resource type="Texture2D" uid="uid://b5mf3871it3ar" path="res://Assets/Enemys/Enemy2.png" id="6_vaxxv"]
[ext_resource type="PackedScene" uid="uid://cfn1tpssanmni" path="res://Scenes/Components/hit_flash_component.tscn" id="8_ore88"]
[ext_resource type="Shader" path="res://Resources/Shader/hit_flash_component.gdshader" id="9_p5din"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_txwdu"]
resource_local_to_scene = true
shader = ExtResource("9_p5din")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0xqg7"]
radius = 12.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0yvt6"]
radius = 6.0
height = 26.0

[node name="SkeletEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_obslr")
max_health = 1.0
max_speed = 60
acceleration = 10.0
drop_percent = 1.0
sprite = ExtResource("6_vaxxv")

[node name="HealthComponent" parent="." instance=ExtResource("2_p2i3h")]

[node name="VialDropComponent" parent="." instance=ExtResource("3_t36rj")]

[node name="VelocityComponent" parent="." instance=ExtResource("4_vkytm")]

[node name="HitFlashComponent" parent="." instance=ExtResource("8_ore88")]
hit_flash_material = SubResource("ShaderMaterial_txwdu")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_e16vh")]
health_component = NodePath("../HealthComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_urpjr")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_0xqg7")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -16)
texture = ExtResource("6_vaxxv")

[node name="Shadow" type="ColorRect" parent="Visuals"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -1.0
offset_right = 10.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_0yvt6")
